--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_website
-description: A new Flutter project.
+name: Change_Charity_Flutter_Website
+description: Change Charity is a free and effortless way for non-profits to raise money. We created this company with one goal in mind. Help non-profits generate a passive stable income.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,11 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  change_charity_components: 0.0.6
+  change_charity_components: 0.0.7
   responsive_builder: ^0.2.0+2
   curved_navigation_bar: ^0.3.3
   scroll_app_bar: ^1.0.2
-
+  url_launcher:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,10 +49,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+     - assets/images/phone-dec.png
+     - assets/images/security.png
+     - assets/images/name-logo.png
+     - assets/images/waiting.png
+     - assets/images/product.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -64,12 +66,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Montserrat
+       fonts:
+         - asset: assets/fonts/Montserrat-Regular.ttf
+         - asset: assets/fonts/Montserrat-Bold.ttf
+           weight: 700
+         - asset: assets/fonts/Montserrat-ExtraBold.ttf
+           weight: 900
+         - asset: assets/fonts/Montserrat-Italic.ttf
+           style: italic
+     - family: Montserrat-thin
+       fonts:
+         - asset: assets/fonts/Montserrat-Thin.ttf
+         - asset: assets/fonts/Montserrat-ThinItalic.ttf
+           style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
