small fixes, new icons, lots of refactoring

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Change Charity Website",
+    "name": "Change Charity - Donate Spare Change",
     "short_name": "Change Charity",
     "start_url": ".",
     "display": "standalone",
